# libdvdread

./: .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README.md  configure.ac  meson.build  meson_options.txt
doc/: doxygen.cfg.in  meson.build
msvc/: config.h
package/crossfiles/: aarch64-linux-android.meson  arm-linux-androideabi.meson  i686-linux-android.meson  x86_64-linux-android.meson
src/: bswap.h  dvd_input.c  dvd_input.h  dvd_reader.c  dvd_udf.c  dvdread_internal.h  ifo_print.c  ifo_read.c  logger.c  meson.build
src/dvdread/: attributes.h  dvd_filesystem.h  dvd_reader.h  ifo_print.h  ifo_read.h  ifo_types.h  meson.build
src/file/: dir_posix.c  dir_win32.c  file_posix.c  file_win32.c  filesystem.c  filesystem.h  stat_posix.c  stat_win32.c
